Changed style for 1.right_div

--- a/style-main.css
+++ b/style-main.css
@@ -254,7 +254,10 @@ p{
     margin: 5%;
     width:50px;
   } */
-
+  .right_img{
+    width: 80%;
+    height: auto;
+  }
   /*style this image for mobile view */
 
 
